--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class and ID Selectors</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Class and ID Selectors</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    p {
+      background: lightpink;
+      font-family: Verdana, "DejaVu Sans", sans-serif;
+    }
+  </style>
+</head>
+
+<body>
+  <p>Number 1 - I'm a class!</p>
+  <div style="color: blue; font-size: 36px;">Number 2 - I'm one ID.</div>
+  <p style="font-size: 24px;">Number 3 - I'm a class, but cooler!</p>
+  <div style="background: lightgreen; font-size: 24px; font-weight: bold;">Number 4 - I'm another ID.</div>
+  <p>Number 5 - I'm a class!</p>
+</body>
+
 </html>
